# streamcraft.tts

./: .gitignore  INTEGRATION_COMPLETE.md  PROGRESS.md  README.md  SETUP.md  build.ps1  docs.md  package-lock.json  requirements-tts.txt  requirements.txt  resp.md  run-dev.ps1  run..ps1  run.ps1  run_dev.ps1  run_pipeline.ps1  streamcraft.tts.sln  transcript.ps1  tts-generate.ps1  watch.ps1
api/: main.py
backend/: VOD_SETUP.md  mypy.ini  pyproject.toml  requirements.txt
backend/streamcraft/: __init__.py  paths.py  settings.py
backend/streamcraft/api/: __init__.py  main.py  routes.py
backend/streamcraft/application/audio/: __init__.py
backend/streamcraft/application/job/: __init__.py
backend/streamcraft/application/shared/: __init__.py  use_case.py
backend/streamcraft/application/transcription/: __init__.py
backend/streamcraft/application/vod/: __init__.py
backend/streamcraft/cli/: __init__.py  main.py
backend/streamcraft/core/: __init__.py  dataset.py  pipeline.py  run_manager.py  sanitize.py  sanitize_v2.py  transcribe.py
backend/streamcraft/domain/: __init__.py
backend/streamcraft/domain/audio/: __init__.py
backend/streamcraft/domain/common/: __init__.py  result.py
backend/streamcraft/domain/job/: __init__.py
backend/streamcraft/domain/shared/: branded_types.py  errors.py  result.py  value_objects.py
backend/streamcraft/domain/transcription/: __init__.py
backend/streamcraft/domain/vod/: __init__.py
backend/streamcraft/jobs/: __init__.py  storage.py
backend/streamcraft/models/: __init__.py  api.py
backend/temp/: jobs.json
(+478 files in other folders)
