[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamcraft"
version = "0.1.0"
description = "Twitch VOD to TTS Dataset Pipeline + Voice Cloning"
authors = [{name = "Streamcraft"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "faster-whisper>=1.0.0",
    "twitch-dl>=2.2.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "webrtcvad>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
demucs = [
    "demucs>=4.0.0",
]

[project.scripts]
streamcraft = "streamcraft.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["streamcraft*"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"
